--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav>
           <div class="nav-container">
             <div class="logo-container">
-              <img class="logo" src="./images/logo2.png" alt="web-logo">
+              <img class="logo" src="logo2.png" alt="web-logo">
             </div>
             <div class="navigation">
               <ul class="nav-ul" type="none">
