--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav>
       <div class="nav-container">
         <div class="logo-container">
-          <img class="logo" src="images/movie.png" alt="web-logo" />
+          <img class="logo" src="movie.png" alt="web-logo" />
         </div>
         <div class="navigation">
           <ul class="nav-ul" type="none">
