--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Zone</title>
+    <title>Comic Zone</title>
     <!-- website icon link -->
     <link
       rel="icon"
@@ -35,7 +35,7 @@
     <nav>
       <div class="nav-container">
         <div class="logo-container">
-          <img class="logo" src="movie.png" alt="web-logo" />
+          <img class="logo" src="logo.png" alt="web-logo" />
         </div>
         <div class="navigation">
           <ul class="nav-ul" type="none">
