--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <span>Your ultimate source for comics, movies, TV shows, and celebrities.</span>
           </div>
         <div class="slogon-head">
-              <span> Movie Zone</span>
+              <span> Comic Zone</span>
           </div>
         <div class="slogon-p1">
               Gaming-Zone is the world's most popular and authoritative source for comics,movie, TV, and celebrity content.
